# almondbenchmark

./: CMakeLists.txt  README.md  build_all_platforms.sh  build_linux.sh  build_windows.bat
src/: color_palette.cpp  color_palette.h  fps_counter.cpp  fps_counter.h  main.cpp  mandelbrot.cpp  mandelbrot.h  renderer.cpp  renderer.h
